[project]
name = "langgraph-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.6.7",
    "langgraph-cli>=0.4.7",
    "pip>=25.2",
    "pypdf>=6.1.3",
    "typing>=3.10.0.0",
]
